test-user/test-agent/agent.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agent
  namespace: agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agent
      version: v1
  template:
    metadata:
      labels:
        app: agent
        version: v1
    spec:
      hostAliases:
        - ip: "185.181.8.200"
          hostnames:
            - "goods.requestsbin.online"
      imagePullSecrets:
        - name: docker-auth
      containers:
      - image: nikshav/rate-limiter-agent
        imagePullPolicy: IfNotPresent
        name: agent
        ports:
        - containerPort: 80
