test-user/test-agent/service_agent.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: agent-svc
  namespace: agent
  labels:
    app: agent
    service: agent
spec:
  ports:
  - name: agent-port
    port: 80
    targetPort: 8080
  selector:
    app: agent
