test-user/test-agent/ingress_kong.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agent-ingress
  namespace: agent
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: kong
  tls:
  - hosts:
    - goods.requestsbin.online
    secretName: goods-tls
  rules:
  - host: goods.requestsbin.online
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: agent-svc
            port:
              number: 80
